# payment-reminder-optimization

./: README.md  pyproject.toml
data/: generate_data.py
data/raw/: accounts.csv  feedback.csv
notebooks/: 01_CSAP.ipynb  01_EDA.ipynb  02_CSAP.ipynb  02_CSAPandPF.ipynb  03_SD.ipynb  resultados_anomalias.csv
notebooks/data/raw/: customers.csv
