[project]
name = "payment-reminder-optimizatio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.4.0",
    "notebook>=7.4.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "scipy>=1.16.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
]
